<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/exercicio1"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="24sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000FF"
                android:text="@string/nome"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000FF"
                android:text="@string/Sexo"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rdgSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbMasculino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/Masculino" />

                <RadioButton
                    android:id="@+id/rdbFeminino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Feminino" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000FF"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000FF"
                android:text="@string/telefone"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000FF"
                android:text="@string/preferencias"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/chkMusica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/musica" />

                <CheckBox
                    android:id="@+id/chkCinema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cinema" />

                <CheckBox
                    android:id="@+id/chkEsporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esporte" />

                <CheckBox
                    android:id="@+id/chkGastronomia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gastronomia" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000FF"
                android:text="@string/Notificacao"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtNotf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/off"
                    android:textOn="@string/on" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margem"
                    android:layout_weight="1"
                    android:text="@string/limpar"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/black" />


                <Button
                    android:id="@+id/btnExibir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margem"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:text="@string/exibir" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lblDados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margem"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
            android:padding="@dimen/margem"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNotificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>